--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,8 @@
   <li> And what books you have to read, and links to where you can buy them </li>
 </ul>
 <p> The mission of battle of the books is: </p>
-<blockquote><b>  Our aim is to support students in their love and discovery for reading
+<blockquote><b> "Our aim is to support students in their love and discovery for reading
    by introducing them to quality literature, to offer books that build upon
    historical values and the dignity of life, and to develop friendships between
-   students based upon socialization, competition, and mutual respect. </b></blockquote>
+   students based upon socialization, competition, and mutual respect". </b></blockquote>
 <img src="http://ves.ccs.k12.nc.us/files/2015/03/Battle-Image.png" alt="BoB logo" width="100" height="75">
