--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,5 +9,5 @@
 <blockquote><b> "Our aim is to support students in their love and discovery for reading
    by introducing them to quality literature, to offer books that build upon
    historical values and the dignity of life, and to develop friendships between
-   students based upon socialization, competition, and mutual respect". </b></blockquote>
+   students based upon socialization, competition, and mutual respect." </b></blockquote>
 <img src="http://ves.ccs.k12.nc.us/files/2015/03/Battle-Image.png" alt="BoB logo" width="100" height="75">
