--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <h2> Welcome to the CCDS BoB home page! </h2>
-<p> Click one of the links above to get started, or keep reading to learn about BoB </p>
+<p style="color:black;"> Click one of the links above to get started, or keep reading to learn about BoB </p>
 <ul>
   <li> This sight lets you track what books people have read </li>
   <li> Who is on the team </li>
