--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,3 +27,4 @@
 <br>
 
 <%= link_to 'New Book', new_book_path %>
+<img src ="https://upload.wikimedia.org/wikipedia/en/a/aa/A_Monster_Calls.jpg" alt ="A Monster Calls pic" width ="50" height="100">
