Book src (for reals this time

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.label :URL %>
     <%= f.text_field :URL %>
   </div>
+  <div class="field">
+    <%= f.label :src %>
+    <%= f.text_field :src %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
