--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,3 +28,4 @@
 
 <%= link_to 'New Book', new_book_path %>
 <img src ="https://upload.wikimedia.org/wikipedia/en/a/aa/A_Monster_Calls.jpg" alt ="A Monster Calls pic" width ="150" height="200">
+<img src ="https://upload.wikimedia.org/wikipedia/en/a/aa/A_Monster_Calls.jpg" alt ="A Monster Calls pic" width ="150" height="200">
