--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,6 +14,7 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
+        <td><%= image_tag(book.src, height: "60") %> </td>
         <td><%= book.author %></td>
         <td><a href="<%= book.URL %>">Buy it here!</a></td>
         <td><%= link_to 'Show', book %></td>
@@ -27,5 +28,3 @@
 <br>
 
 <%= link_to 'New Book', new_book_path %>
-<img src ="https://upload.wikimedia.org/wikipedia/en/a/aa/A_Monster_Calls.jpg" alt ="A Monster Calls pic" width ="150" height="200">
-<img src ="https://upload.wikimedia.org/wikipedia/en/a/aa/A_Monster_Calls.jpg" alt ="A Monster Calls pic" width ="150" height="200">
