--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :author %>
+    <%= f.label "Title" %>
     <%= f.text_field :author %>
   </div>
 
